crates/codegen/tests/snapshots/snapshots__saas__postgres__account.snap
---
source: crates/codegen/tests/snapshots.rs
expression: content
---
#![allow(clippy::all, clippy::pedantic, unused_imports)]
use ::ruprizzle::serde::{Deserialize, Serialize};
use ::ruprizzle::sqlx::FromRow;
use ::ruprizzle::types::chrono::{DateTime, NaiveDate, NaiveTime, Utc};
use ::ruprizzle::types::{Decimal, Uuid};
use ::ruprizzle::serde_json::Value as JsonValue;
use ::ruprizzle::Related;
use ::ruprizzle::Column;
///A person, independent of any tenant they belong to.
#[derive(Debug, Clone, PartialEq, FromRow, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct Account {
    pub id: Uuid,
    pub email: String,
    pub display_name: Option<String>,
    #[sqlx(skip)]
    #[serde(skip_serializing_if = "::ruprizzle::Related::is_absent", default)]
    pub memberships: ::ruprizzle::Related<Vec<super::membership::Membership>>,
    pub created_at: DateTime<Utc>,
}
/// Insert shape: required fields are required, defaulted/optional fields
/// are `Option` so the database can fill them in.
#[derive(Debug, Clone, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct AccountInsert {
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub id: Option<Uuid>,
    pub email: String,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub display_name: Option<String>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub created_at: Option<DateTime<Utc>>,
}
/// Update shape: every field is `Option` to support explicit nulls.
#[derive(Debug, Clone, Default, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct AccountUpdate {
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub id: Option<Uuid>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub email: Option<String>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub display_name: Option<Option<String>>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub created_at: Option<DateTime<Utc>>,
}
impl ::ruprizzle::Model for Account {
    const TABLE: &'static str = "accounts";
    const PRIMARY_KEY: &'static str = "id";
}
/// Table name for this model.
pub const TABLE: &str = "accounts";
pub const ID: Column<Account, Uuid> = Column::new("accounts", "id");
pub const EMAIL: Column<Account, String> = Column::new("accounts", "email");
pub const DISPLAY_NAME: Column<Account, String> = Column::new(
    "accounts",
    "display_name",
);
pub const CREATED_AT: Column<Account, DateTime<Utc>> = Column::new(
    "accounts",
    "created_at",
);
/// Returns an `IncludeList` for this relation.
pub fn memberships() -> ::ruprizzle::IncludeList<
    'static,
    Account,
    super::membership::Membership,
    Uuid,
    (),
> {
    ::ruprizzle::IncludeList::new(
        |__row| __row.id,
        |__row, __loaded| __row.memberships = __loaded,
        super::membership::ACCOUNT_ID,
        |__child| __child.account_id,
    )
}
/// Returns a filter for parents that have at least one matching child.
pub fn memberships_some(
    f: ::ruprizzle::Filter<super::membership::Membership>,
) -> ::ruprizzle::Filter<Account> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "memberships",
        child_col: "account_id",
        parent_table: "accounts",
        parent_col: "id",
        filter: Box::new(f.node),
        negated: false,
    })
}
/// Returns a filter for parents that have no matching child.
pub fn memberships_none(
    f: ::ruprizzle::Filter<super::membership::Membership>,
) -> ::ruprizzle::Filter<Account> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "memberships",
        child_col: "account_id",
        parent_table: "accounts",
        parent_col: "id",
        filter: Box::new(f.node),
        negated: true,
    })
}
/// Returns a filter for parents where every matching child satisfies `f`.
/// Vacuously true for parents with no children.
pub fn memberships_every(
    f: ::ruprizzle::Filter<super::membership::Membership>,
) -> ::ruprizzle::Filter<Account> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "memberships",
        child_col: "account_id",
        parent_table: "accounts",
        parent_col: "id",
        filter: Box::new((!f).node),
        negated: true,
    })
}
/// Prisma-flavoured repository for `#model_name`.
#[derive(Debug, Clone, Copy)]
pub struct AccountRepo<'a> {
    db: &'a super::Db,
}
impl<'a> AccountRepo<'a> {
    /// Creates a new repository handle.
    pub(crate) fn new(db: &'a super::Db) -> Self {
        Self { db }
    }
    /// Start a `find_many` query.
    pub fn find_many(&self) -> ::ruprizzle::SelectQuery<'a, Account> {
        ::ruprizzle::SelectQuery::new(self.db.raw_pool())
    }
    /// Start an `insert` query.
    pub fn create(&self, _data: AccountInsert) -> ::ruprizzle::InsertQuery<'a, Account> {
        let mut insert = ::ruprizzle::InsertQuery::new(self.db.raw_pool());
        insert = insert.set_optional(ID, _data.id);
        insert = insert.set(EMAIL, _data.email);
        insert = insert.set_optional(DISPLAY_NAME, _data.display_name);
        insert = insert.set_optional(CREATED_AT, _data.created_at);
        insert
    }
    /// Start a multi-row `insert` query.
    pub fn create_many(
        &self,
        _data: Vec<AccountInsert>,
    ) -> ::ruprizzle::InsertManyQuery<'a, Account> {
        let mut q = ::ruprizzle::InsertManyQuery::new(self.db.raw_pool());
        for _row in _data {
            q = q
                .row([
                    ("id", ::ruprizzle::Encodable::to_value(&_row.id)),
                    ("email", ::ruprizzle::Encodable::to_value(&_row.email)),
                    (
                        "display_name",
                        ::ruprizzle::Encodable::to_value(&_row.display_name),
                    ),
                    ("created_at", ::ruprizzle::Encodable::to_value(&_row.created_at)),
                ]);
        }
        q
    }
    /// Start an `update` query.
    pub fn update(&self) -> ::ruprizzle::UpdateQuery<'a, Account> {
        ::ruprizzle::UpdateQuery::new(self.db.raw_pool())
    }
    /// Start a `delete` query.
    pub fn delete(&self) -> ::ruprizzle::DeleteQuery<'a, Account> {
        ::ruprizzle::DeleteQuery::new(self.db.raw_pool())
    }
}
